<resources>
    <string name="app_name">Project</string>
    <string name="text1">Develop \n your \n brain</string>
    <string name="start">Start</string>
    <string name="infa">This application is designed to develop user attention. Your task is to remember the color and shape of all the figures that appear on the screen.</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign in</string>
    <string name="CGT">Choose a game time</string>
    <string name="exit">Exit</string>
    <string name="info">info</string>
    <string name="_5_sec">5 sec.</string>
    <string name="_10_sec">10 sec.</string>
    <string name="_15_sec">15 sec.</string>
    <string name="_20_sec">20 sec.</string>
    <string name="level_1">level 1</string>
    <string name="level_2">level 2</string>
    <string name="level_3">level 3</string>
    <string name="level_4">level 4</string>
    <string name="enter_results">  Enter Results</string>
    <string name="check_yourself">Check yourself!</string>
    <string name="res">Your result is:</string>
    <string name="home">Home</string>
    <string name="good">Good!</string>
    <string name="superrr">Super!</string>
    <string name="notbad">Not bad!</string>
    <string name="ycdb">You can do better!</string>
    <string name="dngu">Do not give up!</string>
    <string name="infolvl">The levels differ from each other in the number of figures that will need to be remembered, and their colors. Difficulty increases with level number. Good luck!</string>
    <string name="sounds">Sounds</string>
    <string name="soundson">Sounds ON</string>
    <string name="soundsoff">Sounds OFF</string>
    <string name="loading">Loading</string>
    <string name="you_logged_in">You logged in</string>
    <string name="madeacc">Congratulations, account created!</string>
    <string name="login">You logged in!</string>
    <string name="fail">auth failed</string>
    <string name="create_account">create account</string>
    <string name="password">password</string>
    <string name="email">A letter was sent to your mail with a link to confirm the email address</string>
    <string name="rate">RATE</string>
    <string name="your_rate">Your accuracy: </string>
    <string name="Log_to_play">To maintain statistics, create or log in to your account.</string>
    <string name="email_fail">Email entered incorrectly</string>
    <string name="password_short">Password is too short</string>
    <string name="reset_statistics">reset statistics</string>
    <string name="reset">statistics are reset</string>
    <string name="difff">difficulty of levels</string>
    <string name="lvls">Levels</string>
    <string name="your_achievements">Your Achievements:</string>
    <string name="play_10_games">Play 10 games</string>
    <string name="play_50_games">Play 50 games</string>
    <string name="play_100_games">Play 100 games</string>
    <string name="play_500_games">Play 500 games</string>
    <string name="start_playing">Start playing</string>
    <string name="_5_times_guess_0">5 times in a row guess 0%</string>
    <string name="_5_times_guess_100">5 times in a row guess 100%</string>
    <string name="att">Attention!</string>
    <string name="nach">new achieve!</string>
    <string name="geniy">Genius!</string>
    <string name="fool">Fool!</string>
    <string name="choose_level">Choose level</string>
    <string name="misna">mail not approved!</string>
    <string name="plsconemail">Please confirm the email address for the comfortable use of this application.</string>
    <string name="dei">Data entered incorrectly</string>
    <string name="top_5_users">Top 5 Users:</string>
    <string name="nickname">Nickname</string>
    <string name="st1">Your name in the game!\nStep 1</string>
    <string name="st1_txt">Enter your nickname\nonly if you register\nin first time</string>
    <string name="st2">Your @mail\nStep 2</string>
    <string name="st2_txt">Enter your personal @mail\nThis is an identity check\nIt is important!</string>
    <string name="st3">Enter password\nStep 3</string>
    <string name="st3_txt">Set a password\nfor your account</string>
    <string name="ifnotlogin">An initial login to the application is required to use this feature.</string>
    <string name="shake">Just shake the phone to enter!</string>
</resources>