<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeActivity"
    android:orientation="vertical"
    android:id="@+id/timelayout"
    android:background="@drawable/screenstyle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"></LinearLayout>

    <Button
        android:layout_width="100dp"
        android:text="@string/back"
        android:textSize="20dp"
        android:layout_height="40dp"
        android:onClick="onClick"
        android:id="@+id/back"
        android:textColor="#DCDCDC"
        android:background="@drawable/backstyle"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"></LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/CGT"
        android:textSize="30dp"
        android:id="@+id/TextTime"
        android:textColor="#DCDCDC"
        android:background="@drawable/contur"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:text="@string/_5_sec"
            android:textSize="30dp"
            android:onClick="onClick"
            android:id="@+id/btn_5sec"
            android:textColor="#DCDCDC"
            android:background="@drawable/startstyle"></Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"></LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:text="@string/_10_sec"
            android:textSize="30dp"
            android:onClick="onClick"
            android:id="@+id/btn_10sec"
            android:textColor="#DCDCDC"
            android:background="@drawable/startstyle"></Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"></LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:text="@string/_15_sec"
            android:textSize="30dp"
            android:onClick="onClick"
            android:id="@+id/btn_15sec"
            android:textColor="#DCDCDC"
            android:background="@drawable/startstyle"></Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="25dp"></LinearLayout>

        <Button
            android:layout_width="250dp"
            android:layout_height="90dp"
            android:text="@string/_20_sec"
            android:textSize="30dp"
            android:onClick="onClick"
            android:id="@+id/btn_20sec"
            android:textColor="#DCDCDC"
            android:background="@drawable/startstyle"></Button>
    </LinearLayout>
</LinearLayout>