<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenstyle"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"></LinearLayout>

    <Button
        android:id="@+id/go_out"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/backstyle"
        android:onClick="onClick"
        android:text="@string/back"
        android:textColor="#DCDCDC"
        android:textSize="20dp"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:background="@drawable/txtfon"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/field_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:textColor="#DCDCDC"
                android:textColorHint="#DCDCDC"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="5dp"></LinearLayout>

            <EditText
                android:id="@+id/field_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email"
                android:inputType="textEmailAddress"
                android:textColor="#DCDCDC"
                android:textColorHint="#DCDCDC"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"></LinearLayout>

            <EditText
                android:id="@+id/field_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#DCDCDC"
                android:textColorHint="#DCDCDC"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_password_buttons"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/email_password_fields"
            android:layout_gravity="center"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/startstyle"
                android:onClick="onClick"
                android:text="@string/sign_in"
                android:textColor="#DCDCDC"
                android:textSize="30dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"></LinearLayout>

            <Button
                android:id="@+id/email_create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/startstyle"
                android:onClick="onClick"
                android:text="@string/create_account"
                android:textColor="#DCDCDC"
                android:textSize="25dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"></LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>