<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenstyle"
    android:orientation="vertical"
    tools:context=".RateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center">

        <ImageView
            android:id="@+id/lamp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="top"
            android:background="@drawable/lamp"
            android:transitionName="lampochka"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/txtfon"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/your_achievements"
            android:textColor="#DCDCDC"
            android:textSize="20dp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="15dp"></LinearLayout>

    <!--    -->
    <!--    -->
    <!--    -->
    <!--    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1000"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"></LinearLayout>

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/start"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/start_playing"
                        android:textColor="#DCDCDC"
                        android:textSize="25dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/like"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/play_10_games"
                        android:textColor="#DCDCDC"
                        android:textSize="25dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/strong"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/play_50_games"
                        android:textColor="#DCDCDC"
                        android:textSize="25dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_4"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/lavr"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/play_100_games"
                        android:textColor="#DCDCDC"
                        android:textSize="25dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/crwn"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/play_500_games"
                        android:textColor="#DCDCDC"
                        android:textSize="25dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_6"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/innovation"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/_5_times_guess_100"
                        android:textColor="#DCDCDC"
                        android:textSize="24dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

            <!-- begin -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/ach_7"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/contur"
                    android:gravity="left"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:background="@drawable/joker"></ImageView>

                    <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/_5_times_guess_0"
                        android:textColor="#DCDCDC"
                        android:textSize="25dp"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dp"></LinearLayout>

            </LinearLayout>

            <!-- end -->

        </LinearLayout>


    </ScrollView>

    <!--    -->
    <!--    -->
    <!--    -->
    <!--    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/nulll"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/startstyle"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/reset_statistics"
            android:textColor="#DCDCDC"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"></LinearLayout>

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/startstyle"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/back"
            android:textColor="#DCDCDC"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"></LinearLayout>
    </LinearLayout>
</LinearLayout>